force-app/main/default/src/objects/PJN_Zip_To_Team__c/PJN_Zip_To_Team__c.object-meta.xml
<CustomObject>
    <description>Zip to Team is used to record mapping between zip codes and Case Managers, Therapeutic Specialists, regions and territories.</description>
    <label>Zip To Team</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip To Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip To Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>