force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_National_Sales_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_National_Sales_Director_Email__c</fullName>
    <description>For email alerts in the flow &quot;Send Email to RBM and MS Sales&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>National Sales Director Email</label>
    <type>Email</type>
</CustomField>