force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_RBM_Territory__c.field-meta.xml
<CustomField>
    <fullName>MVN_RBM_Territory__c</fullName>
    <description>The RBM territory any case tied to this ZTT is assigned to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The RBM territory any case tied to this ZTT is assigned to.</inlineHelpText>
    <label>RBM Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>