force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_RBM_TerrName__c.field-meta.xml
<CustomField>
    <fullName>MVN_RBM_TerrName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RBM Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>