force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_RBM_User__c.field-meta.xml
<CustomField>
    <fullName>MVN_RBM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for RBM User, the RBM user assigned to care plans linked to this Zip To Team record.</description>
    <label>RBM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_To_Team_RBM</relationshipName>
    <type>Lookup</type>
</CustomField>