force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_RD_Email__c.field-meta.xml
<CustomField>
    <fullName>MVN_RD_Email__c</fullName>
    <description>Regional Director Email - For email alerts in the flow &quot;Send Email to RBM and MS Sales&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>RD Email</label>
    <type>Email</type>
</CustomField>