force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/MVN_RD_Territory__c.field-meta.xml
<CustomField>
    <fullName>MVN_RD_Territory__c</fullName>
    <description>The Regional Director territory any case tied to this ZTT is assigned to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Regional Director territory any case tied to this ZTT is assigned to.</inlineHelpText>
    <label>RD Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>