force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Case_Manager__c.field-meta.xml
<CustomField>
    <fullName>PJN_Case_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for Case Manager, the PJN user who will own care plans linked to this Zip To Team record.</description>
    <label>Case Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Zip_To_Team</relationshipName>
    <type>Lookup</type>
</CustomField>