force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_External_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_External_ID__c</fullName>
    <description>Text (100) External ID field (unique).</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>