force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Key__c.field-meta.xml
<CustomField>
    <fullName>PJN_Key__c</fullName>
    <description>The key which is used to match a case to a ZTT record. Created July 11, 2019</description>
    <formula>PJN_Zip_Code__c + &apos;_&apos; +  TEXT(PJN_Country__c)  + &apos;_&apos; +  PJN_Program__r.PJN_Program_DeveloperName__c</formula>
    <inlineHelpText>The key which is used to match a case to a ZTT record.</inlineHelpText>
    <label>Key</label>
    <type>Text</type>
</CustomField>