force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Program__c.field-meta.xml
<CustomField>
    <fullName>PJN_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The program this ZTT is related to. Created July 11, 2019</description>
    <inlineHelpText>The program this ZTT is related to</inlineHelpText>
    <label>Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Zip To Team</relationshipLabel>
    <relationshipName>PJN_Zip_To_Teams</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>