force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Region__c.field-meta.xml
<CustomField>
    <fullName>PJN_Region__c</fullName>
    <description>The region any case tied to this ZTT is assigned to. Created July 12, 2019</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The region any case tied to this ZTT is assigned to.</inlineHelpText>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>