force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Territory__c.field-meta.xml
<CustomField>
    <fullName>PJN_Territory__c</fullName>
    <description>The territory any case tied to this ZTT is assigned to. Created July 12, 2019</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The territory any case tied to this ZTT is assigned to.</inlineHelpText>
    <label>Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>