force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Territory_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PJN_Territory_Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>