force-app/main/default/src/objects/PJN_Zip_To_Team__c/fields/PJN_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Zip_Code__c</fullName>
    <description>Text (5) Zip code field.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Zip Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>