force-app/main/default/src/objects/PJN_Zip_To_Team__c/listViews/MVN_All_Zip_to_Team.listView-meta.xml
<ListView>
    <fullName>MVN_All_Zip_to_Team</fullName>
    <columns>NAME</columns>
    <columns>PJN_Zip_Code__c</columns>
    <columns>PJN_Key__c</columns>
    <columns>PJN_Program__c</columns>
    <columns>PJN_Case_Manager__c</columns>
    <columns>MVN_RBM_User__c</columns>
    <columns>MVN_RBM_Territory__c</columns>
    <columns>PJN_Region__c</columns>
    <columns>PJN_Territory__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>MVN_Sales_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Zip to Team</label>
</ListView>